# Proyecto1_Graficacion_por_computadora

./: CMakeLists.txt  main.cpp
